tests/NormalTests/paczka1/small_fuzzy/89445742.err
Error in line 1: Qfxa0oo S479 14,7
Error in line 11: Qfxa0oo S980 57,4
